--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-675.3KB/s(Youtube:不良林), server: 152.89.210.105, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 97.64.31.80, port: 247, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇨🇳 中国-373.6KB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-372.8KB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.29MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-7.06MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.52MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.22MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.81MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇮🇳 印度-931.7KB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-675.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-931.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-675.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-931.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-675.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-931.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.81MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-675.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-931.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-675.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-931.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-675.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-931.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-675.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-931.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
