--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.08MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.83MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-552.5KB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇨🇳 中国-3.00MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: 8d0db1d1-62a2-4d8b-b272-e4f364e064c6, sni: shcm.pdjc.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.63MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.30MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.69MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.58MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 🇨🇳 中国-9.19MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.44MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.73MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.94MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.14MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.68MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.58MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.32MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-421.5KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-295.5KB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-400.9KB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-400.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-400.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-400.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-400.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-400.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-400.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-400.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
