--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-451.4KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.82MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-295.5KB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.96MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.92MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇰🇷 韩国-435.5KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-986.1KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-648.4KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-883.5KB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-985.1KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.82MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: 8d0db1d1-62a2-4d8b-b272-e4f364e064c6, sni: shcm.pdjc.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.53MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.05MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-722.2KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.04MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.03MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.27MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-451.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-295.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-435.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-986.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-648.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-985.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-722.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-451.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-295.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-435.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-986.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-648.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-985.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-722.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-451.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-295.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-435.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-986.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-648.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-985.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-722.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-451.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-295.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-435.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-986.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-648.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-985.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-722.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-451.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-295.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-435.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-986.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-648.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-985.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-722.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-451.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-295.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-435.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-986.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-648.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-985.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-722.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-451.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-295.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-435.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-986.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-648.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-985.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-722.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
