--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.82MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: 8d0db1d1-62a2-4d8b-b272-e4f364e064c6, sni: shcm.pdjc.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.53MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.05MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-722.2KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.01MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.37MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.04MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.03MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.27MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-2.55MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.08MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.84MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇰🇷 韩国-492.5KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.89MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-722.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.84MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-492.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-722.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.84MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-492.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-722.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.84MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-492.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-722.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.84MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-492.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-722.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.84MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-492.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-722.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.84MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-492.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-722.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-869.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.84MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-492.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
